--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,5 +1,7 @@
-Django
-redis
-django-redis
-gunicorn
-psycopg2
+Django==1.11.7
+django-redis==4.8.0
+djangorestframework==3.7.3
+gunicorn==19.7.1
+psycopg2==2.7.3.2
+pytz==2017.3
+redis==2.10.6
