--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -5,14 +5,14 @@ server {
     charset utf-8;
 
     location /api {
-        proxy_pass http://web:8000;
+        proxy_pass http://web:8000/api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
     
     location / {
-        alias /data/web/coinsim/frontend/src/dist/;
+        alias /public/;
     }
 
 }
