--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,8 +4,8 @@ server {
     server_name not.configured.example.com;
     charset utf-8;
 
-    location /api {
-        proxy_pass http://web:8000/api;
+    location ~ ^/(api|admin) {
+        proxy_pass http://web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
