--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # compiled output
 /dist
+dist/
 /tmp
 *.pyc
 __pycache__
@@ -28,6 +29,7 @@ npm-debug.log
 testem.log
 /typings
 venv
+env
 
 # e2e
 /e2e/*.js
