--- a/web/coinsim/frontend/src/package.json
+++ b/web/coinsim/frontend/src/package.json
@@ -34,6 +34,8 @@
     "font-awesome": "^4.7.0",
     "highcharts": "^6.0.3",
     "moment": "2.19.1",
+    "ng2-ion-range-slider": "^1.0.3",
+    "ng2-slideable-directive": "^1.0.13",
     "ngx-bootstrap": "1.9.3",
     "rxjs": "5.5.2",
     "simple-line-icons": "^2.4.1",
@@ -44,6 +46,7 @@
     "@angular/cli": "1.5.0",
     "@angular/compiler-cli": "5.0.1",
     "@types/jasmine": "2.6.3",
+    "@types/jquery": "^3.2.18",
     "@types/node": "8.0.50",
     "codelyzer": "4.0.1",
     "jasmine-core": "2.8.0",
@@ -51,9 +54,9 @@
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.3.0",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
-    "karma-coverage-istanbul-reporter": "1.3.0",
     "protractor": "5.2.0",
     "ts-node": "3.3.0",
     "tslint": "5.8.0",
