--- a/web/coinsim/frontend/src/package.json
+++ b/web/coinsim/frontend/src/package.json
@@ -16,11 +16,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^5.2.1",
+    "@angular/cdk": "^5.1.0",
     "@angular/common": "5.0.1",
     "@angular/compiler": "5.0.1",
     "@angular/core": "5.0.1",
     "@angular/forms": "5.0.1",
     "@angular/http": "5.0.1",
+    "@angular/material": "^5.1.0",
     "@angular/platform-browser": "5.0.1",
     "@angular/platform-browser-dynamic": "5.0.1",
     "@angular/router": "5.0.1",
@@ -33,6 +36,7 @@
     "cryptocoins-icons": "^2.7.0",
     "dev": "^0.1.3",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "highcharts": "^6.0.3",
     "moment": "2.19.1",
     "ng2-ion-range-slider": "^1.0.3",
@@ -44,8 +48,8 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular-devkit/core": "0.0.21",
     "@angular-devkit/build-optimizer": "0.0.33",
+    "@angular-devkit/core": "0.0.21",
     "@angular-devkit/schematics": "0.0.37",
     "@angular/cli": "1.5.0",
     "@angular/compiler-cli": "5.0.1",
