--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -8,4 +8,5 @@ redis==2.10.6
 celery==4.1.0
 requests==2.18.4
 djangorestframework-jwt==1.11.0
+beautifulsoup4==4.5.1
 -e git://github.com/limdauto/drf_openapi.git#egg=drf_openapi
