--- a/web/coinsim/frontend/src/package.json
+++ b/web/coinsim/frontend/src/package.json
@@ -29,7 +29,7 @@
     "@angular/router": "5.0.1",
     "@angular/upgrade": "5.0.1",
     "@types/highcharts": "^5.0.12",
-    "angular-highcharts": "^5.2.0",
+    "angular-highcharts": "5.1.1",
     "bootstrap": "4.0.0-beta.2",
     "chart.js": "2.7.1",
     "core-js": "2.5.1",
